# GeekSpaceBot

./: .gitignore  DEVELOPERS.md  Pipfile  READEME.md  README.md  README.rst  gsbot.py  launcher.py  pyproject.toml
config/: config_example.json
extensions/: atcoder.py  genembed.py  gnupdate.py  guildname_updater.py  quote.py  vcrole.py
