[tool.poetry]
name = "geekspacebot"
version = "0.1.0"
description = "This is a bot for Geek-Space"
authors = ["Lazialize"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.2"
asyncpg = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
