[tool.poetry]
name = "geekspacebot"
version = "0.1.0"
description = "The discord bot for Geek Space"
authors = ["Lazialize <lazialize@mist.conoha.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = {extras = ["voice"], version = "^1.2.5"}

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
